Replaced rollup with vite
This commit also makes it possible to import the source SCSS styles from
dependent code.

Caveats/differences from previous setup:
 - `dist/tagin.module.min.js` isn't actually minified - see vitejs/vite#6555.
 - no css sourcemap are generated - see vitejs/vite#2830.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
-	"include": ["src"],
-  "exclude": ["dist", "node_modules"],
-  "compilerOptions": {
+	"include": ["src/*"],
+	"exclude": ["dist", "node_modules", "vite.config", "vite.min.config"],
+	"compilerOptions": {
+		"rootDir": "src",
+		"isolatedModules": true,
 		"target": "ESNext",
-    "outDir": "dist",
-    "declaration": true,
-    "declarationDir": ".",
-		"emitDeclarationOnly": true
-  }
+		"outDir": "dist",
+		"declaration": true,
+		"declarationDir": "dist",
+		"emitDeclarationOnly": true,
+		"resolveJsonModule": true,
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true
+	}
 }
